MAGENTO-2406
